# fastapi_03_07apirouter

./: .gitignore  docker-compose.yml  uv導入後の起動方法.md
.github/workflows/: ci.yml
document/: DDDの考え方.md  uv導入後の起動方法.md  結合テストの方針.md  認証機能テストガイド.md
fastapi/: alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt
fastapi/Dockerfile/local/: Dockerfile
fastapi/alembic/: env.py
fastapi/alembic/versions/: 264f9b6263b4_create_tables.py
fastapi/app/: main.py
fastapi/app/crud/: category.py  item.py
fastapi/app/db/: database.py
fastapi/app/domain/category/: __init__.py  category.py  value_objects.py
fastapi/app/domain/entities/: category.py  item.py
fastapi/app/domain/items/: __init__.py  item.py  value_objects.py
fastapi/app/dto/: category_dto.py  item_dto.py
fastapi/app/infrastructure/sqlalchemy/: __init__.py
fastapi/app/infrastructure/sqlalchemy/models/: __init__.py  category_orm.py  item_category_association.py  item_orm.py
fastapi/app/infrastructure/sqlalchemy/repositories/: __init__.py  category_repo_impl.py  item_repo_impl.py
fastapi/app/models/: category.py  item.py
fastapi/app/repository/: category_repository.py  item_repository.py
fastapi/app/routers/: categories.py  items.py
fastapi/app/schemas/: category.py  item.py
fastapi/app/usecases/category/: create_category.py  get_category.py  list_categories.py  update_category.py
fastapi/app/usecases/item/: create_item.py  delete_item.py  get_item.py  list_items.py  update_item.py  update_item_name.py
fastapi/integrate_tests/: conftest.py
fastapi/integrate_tests/infrastructure/sqlalchemy/repositories/: test_category_repo_impl.py  test_item_repo_impl.py
fastapi/tests/: __init__.py  test_api.py  test_main.py  test_smoke.py
fastapi/tests/db/: test_database.py
fastapi/tests/domain/: __init__.py
fastapi/tests/domain/category/: test_category.py  test_value_objects.py
fastapi/tests/domain/items/: test_item.py  test_value_objects.py
fastapi/tests/dto/: test_category_dto.py  test_item_dto.py
fastapi/tests/infrastructure/sqlalchemy/models/: test_category_orm.py  test_item_category_association.py  test_item_orm.py
fastapi/tests/infrastructure/sqlalchemy/repositories/: test_category_repo_impl.py  test_item_repo_impl.py
fastapi/tests/routers/: test_categories.py  test_items.py
fastapi/tests/usecases/: __init__.py
fastapi/tests/usecases/category/: __init__.py  test_create_category.py  test_get_category.py  test_list_categories.py  test_update_category.py
fastapi/tests/usecases/item/: __init__.py  test_create_item.py  test_delete_item.py  test_get_item.py  test_list_items.py  test_update_item.py  test_update_item_name.py
postgres/Dockerfile/local/: Dockerfile
postgres/initdb/: ddl.sql
scripts/: check_test.sh
